syntax = "proto3";

package user.account.v1;
option go_package = "github.com/ysomad/answersuck/gen/proto/user/account/v1;accountv1";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccountById (GetAccountByIdRequest) returns (GetAccountByIdResponse);
  rpc GetAccountByEmail (GetAccountByEmailRequest) returns (GetAccountByEmailResponse);
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
}

message Account {
  string id = 1;
  string email = 2;
  string username = 3;
  bool email_verified = 4;
  bool archived = 5;
  google.protobuf.Timestamp creation_time = 50;
  google.protobuf.Timestamp update_time = 51;
}

message CreateAccountRequest {
  string email = 1 [(validate.rules).string = { email: true, max_len: 320 }];
  string username = 2 [(validate.rules).string.pattern = "^[a-zA-Z0-9][\\w]{3,24}$"];
  string password = 3 [(validate.rules).string = { min_len: 10, max_len: 128 }];
}

message CreateAccountResponse {
  Account account = 1;
}

message GetAccountByIdRequest {
  string account_id = 1 [(validate.rules).string.uuid = true];
}

message GetAccountByIdResponse {
  Account account = 1;
}

message GetAccountByEmailRequest {
  string email = 1 [(validate.rules).string.email = true];
}

message GetAccountByEmailResponse {
  Account account = 1;
}

message DeleteAccountRequest {
  string account_id = 1 [(validate.rules).string.uuid = true];
}

message DeleteAccountResponse {}